# lab06

./: README.md
.github/workflows/: DEB.yml  DMG.yml  MSI.yml  RPM.yml
formatter_ex_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
