cmake_minimum_required(VERSION 3.4)
project(solver)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(solver equation.cpp)
include_directories(../formatter_ex_lib ../solver_lib)
add_subdirectory(../formatter_ex_lib formatter_ex)
add_subdirectory(../solver_lib solver_lib)
target_link_libraries(solver PUBLIC formatter_ex solver_lib)

install(TARGETS solver DESTINATION bin)

set(CPACK_PACKAGE_FILE_NAME "Solver")
set(CPACK_SOURCE_GENERATOR "TGZ")
if(DEB)
        set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Paul")
	set(CPACK_GENERATOR "DEB")
endif()
if(RPM)
	set(CPACK_GENERATOR "RPM")
endif()
if(MSI)
	set(CPACK_GENERATOR "MSI")
endif()
if(DMG)
	set(CPACK_GENERATOR "DragNDrop")
endif()
include(CPack)
